--- a/src/index.css
+++ b/src/index.css
@@ -14,7 +14,7 @@
 @font-face {
   font-family: 'TitleFont';
   src: url(
-'C:\Users\jessi\Documents\coding\w\Basic Website\src\assets\Fonts\typewcond_regular.otf'  ) 
+    "C:\Users\jessi\Documents\im restarting wtf\Personal-Website\src\assets\Fonts\typewcond_regular.otf"  ) 
     format('truetype');
 }
 
