--- a/src/Components/pages/About/About.css
+++ b/src/Components/pages/About/About.css
@@ -1,22 +1,54 @@
-.container{
-    height: 1400px;
+.container-1{
+    height: 1000px;
+    z-index: 100;
+    background-image: url(../../../assets/gradient-bg.jpg);
+    object-fit: cover;
 }
-.dark .container{
-    background-color: #1c2a48;
+.dark .container-1{
+    transition: 0.5s;
+    background-image: url(../../../assets/gradient-night.png);
+  }
+.dark h1, h2{
+    color:white;
 }
+
 .text-container{
     height: 200px;
     display: flex;
     justify-content: center;
     align-items: center;
 }
-
-.me{
-    width:23%;
-    padding: 10px;
+.img-container{
     position: absolute;
+    width: 400px;
     top:20%;
     left: 20%;
+    /* border: 5px solid; */
+    border-color: #1943b7;
+    padding: 0%;
+    border-radius: 30px;
+    z-index: 100;
+}
+.dark .img-container{
+    border-color: white;
+}
+.ability-box{
+    height: 100px;
+    width: 600px;
+    border: 2px solid;
+    border-radius: 12px;
+    padding: 14.3px;
+}
+.dark .ability-box{
+    color: #fff;
+}
+.lang-icon{
+    height:70px;
+    padding-right: 20px;
+}
+.me{
+    width:100%;
+    padding: 10px;
     border-radius: 15%;
     animation: fade-in 0.8s;
 }
@@ -24,13 +56,15 @@
     transform: rotate(10deg);
 }
 
-.text{
+.name{
     color:#1943b7;
     position: absolute;
-    top: 37%;
+    top: 32%;
     left: 50%;
-    font-weight: 800;
-    animation: fade-down 0.6s;
+    font-weight: 300px;
+    font-size: 60px;
+    font-family: 'NameFont';
+   animation: fade-down 0.6s;
 }
 .dark .text{
     color: #fff;
@@ -39,13 +73,56 @@
     width: 25%;
     color:#1943b7;
     position: absolute;
-    top: 50%;
+    top: 46%;
     left: 50%;
     animation: fade-down 0.6s;
 }
 .dark .description{
     color: #fff;
 }
+.info-container{
+    position: absolute;
+    top: 60%;
+    left: 50%;
+    width: 400px;
+}
+.prompt{
+    padding: 3%;
+    color: #1943b7
+}
+.dark .prompt{
+    color: white;
+}
+.bar{
+    border: 2px solid;
+    border-radius: 12px;
+}
+.dark .bar{
+border-color: white;
+}
+.filled{
+    width: 300px;
+    background-color: #1943b7;
+    border-radius: 12px;
+}
+.dark .filled{
+    background-color: white;
+    color: white;
+}
+.filled-exp{
+    width: 70px;
+    background-color: #1943b7;
+    border-radius: 12px;
+}
+.dark .filled-exp{
+    background-color: white;
+    color: white;
+}
+.char-info{
+    padding: 3%;
+    border: 2px solid;
+}
+
 .doodle-top{
     width: 6%;
     position: absolute;
@@ -69,8 +146,8 @@
 .doodle-bottom{
     width: 6%;
     position: absolute;
-    top: 20%;
-    left:75%;
+    top: 50%;
+    left:78%;
     animation: fade-up 0.7s;
     
 }
@@ -90,7 +167,7 @@
 .goose{
     width: 13%;
     position: absolute;
-    top: 55%;
+    top: 20%;
     left: 75%;
     animation: fade-up 0.7s;
 }
@@ -113,11 +190,34 @@
     align-items: center;
     justify-content: center;
     position: absolute;
-    top:105%;
+    top:110%;
     left: 20%;
     border:0px solid;
     border-radius: 3%;
     border-color: #fff;
+}
+
+
+@media screen and (max-width: 1000px) {
+    .img-container{
+        position:absolute;
+        left: 2.5%;
+    }
+    .me{
+        width: 90%;
+    }
+    .name{
+        position:absolute;
+        top: 200px;
+    }
+    .description{
+        top: 360px;
+        width: 380px;
+    }
+    .ability-box{
+        width: 400px;
+        height: 180px;
+    }
 }
 
 
@@ -155,3 +255,5 @@
   @keyframes typing{
     from { width: 0 }
   }
+
+
