--- a/src/Components/pages/About/extrastuff.css
+++ b/src/Components/pages/About/extrastuff.css
@@ -1,3 +1,7 @@
+h1{
+    color: white;
+    font-family: NameFont;
+}
 .icon-container{
     width:100%;
     height:400px;
@@ -24,7 +28,8 @@
     left:1vw;
 }
 .blurb{
-    width: 400px;
+    color: white;
+    width: 1000px;
     height: 300px;
     padding: 30px;
     display: flex;
@@ -33,8 +38,7 @@
     border-radius: 37px;
     position:relative;
     position: absolute;
-    top: -17vw;
-    left: 30vw;
-    z-index: 1000 !important;
+    top: 300px;
+    left: 3%;
     border: 2px solid;
 }
