--- a/src/index.css
+++ b/src/index.css
@@ -3,11 +3,6 @@
   padding: 0;
   box-sizing: border-box;
   font-family: 'TitleFont', sans-serif;
-
-}
-
-body{
-  background-image: url(./assets/gradient-bg.jpg);
 }
 
 
@@ -17,20 +12,48 @@ body{
     "C:\Users\jessi\Documents\im restarting wtf\Personal-Website\src\assets\Fonts\typewcond_regular.otf"  ) 
     format('truetype');
 }
+@font-face {
+  font-family: 'NameFont';
+  src: url("C:\Users\jessi\Documents\im restarting wtf\Personal-Website\src\assets\Fonts\Retro Gaming.ttf")
+  format('truetype');
+}
 
 .container{
   max-width: 1920px;
+  height: 100vh;
+  width: 100vw;
   transition: 0.5s;
   background-image: url(./assets/gradient-bg.jpg);
+  object-fit: cover;
 }
-.container.dark{
-  background: #1c2a48;
+.dark .container{
+  transition: 0.5s;
+  background-image: url(./assets/gradient-night.png);
 }
 .contents{
   z-index: 0;
 }
 
 
+.bg{
+  height: 90vh;
+  width: 100vw;
+  object-fit: cover;
+  z-index: 0;
+  animation:
+    blinking 3s infinite;
+  
+}
+
+@keyframes blinking{
+  0% {opacity:0; 
+    transform: translateX(40px);
+  }
+  50% {opacity:1;}
+  100% {opacity:0;
+    transform: translateX(-40px);
+  }
+}
 @keyframes pan{
   0% {opacity:0; 
     transform: translateX(100%);
@@ -39,4 +62,11 @@ body{
   100% {opacity:0;
     transform: translateX(0px);
   }
+}
+
+@media screen and (max-width: 1000px) {
+.container{
+  height: 1000px;
+  max-width: 950px;
+}
 }
