--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -4,7 +4,7 @@
     align-items: center;
     justify-content: space-between;
     color: #1943b7;
-    padding: 0.08% 7%;
+    padding: 0.5% 7%;
     transition: 0.5s;
     z-index: 9999;
     opacity: 1;
@@ -12,7 +12,7 @@
 }
 
 .logo{
-    width: 6%;
+    width: 80px;
     height: auto;
     cursor: pointer;
     object-fit: contain;
@@ -33,7 +33,7 @@ ul li{
 }
 
 .toggle-icon{
-    width: 5%;
+    width: 80px;
     height: auto;
     object-fit: contain;
     cursor: pointer;
@@ -67,4 +67,9 @@ ul li{
 }
 .dark .nav-text:hover{
     color:#a5d1ff;
+}
+@media screen and (max-width: 1000px){
+    .logo{ 
+        width: 100px;
+    }
 }
