--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -10,6 +10,40 @@
     opacity: 1;
     position: absolute;
 }
+.hamburger{
+    width: 30px;
+    position: fixed;
+    left: 93vw;
+    
+}
+.ham-open {
+    position: fixed;
+    top: 0;
+    left: 0;
+
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    width: 100%;
+    height: 100vh;
+    background-color: #1943b7;
+    padding: 20px 0; /* Add some padding to space out the links */
+  }
+.ham-text{
+    color: white;
+    text-decoration: none;
+    margin-left: none;
+}
+.ham-links{
+    
+    width: 100px;
+    color: white;
+    align-items: center;
+    text-align: center;
+}
 
 .logo{
     width: 80px;
@@ -72,4 +106,15 @@ ul li{
     .logo{ 
         width: 100px;
     }
+}
+
+@media screen and (max-width: 800px){
+    .topbar{
+        display: none;
+    }
+    
+}
+.closed{
+    display: none;
+    background-color: #1943b7;
 }
