--- a/src/index.css
+++ b/src/index.css
@@ -42,3 +42,7 @@
   src: url("C:\Users\jessi\Documents\im restarting wtf\Personal-Website\src\assets\Fonts\Retro Gaming.ttf")
   format('truetype');
 }
+@font-face {
+  font-family: TitleFontBold;
+  src: url("C:\Users\jessi\Documents\im restarting wtf\Personal-Website\src\assets\Fonts\typewcond_bold.otf");
+}
