modified font path for retrogaming

--- a/src/index.css
+++ b/src/index.css
@@ -39,7 +39,7 @@
 }
 @font-face {
   font-family: 'NameFont';
-  src: url("C:\Users\jessi\Documents\im restarting wtf\Personal-Website\src\assets\Fonts\Retro Gaming.ttf")
+  src: url("./assets/Fonts/RetroGaming.ttf")
   format('truetype');
 }
 @font-face {
