--- a/src/App.css
+++ b/src/App.css
@@ -14,18 +14,19 @@
 
 
 body {
-    background-size: cover;
-    background-attachment: fixed;
-    background-image: linear-gradient(#b7d6ed, #b7d6ed, #b7d6ed, #c5daee, #ccd7ea, #e9dbea, #f5d6d6);
-    min-height: 100vh;
-    transition: 0.5s;
-    color: #1943b7
-    /* border: 5px solid green; */
-} 
+  animation: fade-in 0.5s;
+  background-size: cover;
+  background-attachment: fixed;
+  background-image: linear-gradient(#b7d6ed, #b7d6ed, #b7d6ed, #c5daee, #ccd7ea, #e9dbea, #f5d6d6);
+  min-height: 100vh;
+  transition: background-image 0.5s ease, color 0.5s ease;
+  color: #1943b7;
+}
 
-h1, h2, h3, p{
+h1, h2, h3, p {
   font-weight: normal;
-  color:#1943b7;
+  color: #1943b7;
+  transition: color 0.5s ease;
 }
 .dark h1{
     color: white;
@@ -46,9 +47,8 @@ h1, h2, h3, p{
     animation: blinking 3s infinite;
     
 }
-.container{
 
-}
 .dark.container{
+  animation: fade-in 0.4s;
   background-image: linear-gradient(#18336e, #18336e, #1c4676, #21547a, #2a6e89);
 }
