--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -9,7 +9,19 @@
     z-index: 9999;
     opacity: 1;
     position: fixed;
+    /* backdrop-filter: blur(5px); */
+}
+
+.topbar{
     backdrop-filter: blur(5px);
+    border: 2px solid;
+    border-radius: 40px;
+    margin-left: 35px;
+    background-color: #c9d8ecc6;
+}
+.dark .topbar{
+    background-color: #548bc28f;
+    border-color: white;
 }
 .hamburger{
     opacity: 0;
